# fz.api

./: .gitignore  README.md  pyproject.toml
examples/clients/: FzApiClient.java  FzHttpClient.java  fzapi_client.py  fzapi_client.sh  fzhttp_client.py  fzhttp_client.sh
fz_api/: __init__.py  app.py  cli.py  jobs.py  routes.py  schemas.py  serialization.py  workspace.py
fz_http/: __init__.py  app.py  cli.py  jobs.py  worker.py  workspace.py
tests/: conftest.py  test_api.py
